[package]
name = "shroom_proxy"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[[bin]]
name = "simple"
path = "example/simple.rs"


[[bin]]
name = "ws_client"
path = "example/ws_client.rs"

[[bin]]
name = "shroom_client"
path = "example/shroom_client.rs"

[[bin]]
name = "shroom_proxy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#shroom-net = { git = "ssh://git@github.com/jon-zu/shroom-net.git" }
shroom-net = { path = "/home/jonas/projects/shroom/shroom-net/crates/shroom-net" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tokio-util = { version = "0.7", features = ["net"] }
tokio-stream = { version = "0.1", features = ["full"] }
futures = "0.3.30"
log = "0.4.20"
tokio-native-tls = "0.3.1"
governor = "0.6.0"
config = "0.13.4"
serde = { version = "1.0.193", features = ["derive"] }
clap-serde-derive = "0.2.1"
clap = { version = "4.4.12", features = ["derive"] }
lru = "0.12.1"
env_logger = "0.10.1"
duration-string = { version = "0.3.0", features = ["serde"] }
#tokio-websockets = { version = "0.5.1", features = ["native-tls", "client", "ring", "rand"] }
tokio-websockets = {path = "/home/jonas/projects/tokio-websockets", features = ["native-tls", "client", "ring", "rand", "server"] }
http = "1.0.0"
bytes = "1.5.0"
